三.NettyServer字符串解码器

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
     <modules>
         <module>itstack-demo-netty-1-00</module>
+        <module>itstack-demo-netty-1-01</module>
+        <module>itstack-demo-netty-1-02</module>
+        <module>itstack-demo-netty-1-03</module>
     </modules>
 
     <dependencies>
