--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>itstack-demo-netty-1-01</module>
         <module>itstack-demo-netty-1-02</module>
         <module>itstack-demo-netty-1-03</module>
+        <module>itstack-demo-netty-1-04</module>
     </modules>
 
     <dependencies>
