--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
         <module>itstack-demo-netty-1-02</module>
         <module>itstack-demo-netty-1-03</module>
         <module>itstack-demo-netty-1-04</module>
+        <module>itstack-demo-netty-1-05</module>
+        <module>itstack-demo-netty-1-06</module>
+        <module>itstack-demo-netty-1-07</module>
+        <module>itstack-demo-netty-1-08</module>
+        <module>itstack-demo-netty-1-09</module>
+        <module>itstack-demo-netty-1-10</module>
+        <module>itstack-demo-netty-2-01</module>
+        <module>itstack-demo-netty-2-02</module>
+        <module>itstack-demo-netty-2-03</module>
+        <module>itstack-demo-netty-2-04</module>
+        <module>itstack-demo-netty-2-05</module>
     </modules>
 
     <dependencies>
